--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,44 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
-    <link rel="stylesheet" href="css/styles.css">
-</head>
-
-<body>
-    <h1>
-        <%= kindOfDay %>
-    </h1>
-    <!-- <% if (kindOfDay==="Thursday" ) { %>
-        <h1 style="color: red;">
-            <%=kindOfDay%> ToDo List
+<%- include("header") -%>
+    <div id="heading" class="box">
+        <h1>
+            <%= listTitle %>
         </h1>
-        <% } else { %>
-            <h1 style="color: blue;">
-                <%=kindOfDay%> ToDo List
-            </h1>
-            <% } %> -->
-
-    <ul>
-        <!-- <li>Buy Food</li>
-        <li>Cook Food</li>
-        <li>Eat Food</li> -->
-        <!-- <li><%= listItems %></li> -->
+    </div>
+    <div class="box">
         <% for (let i=0; i < listItems.length; i++){ %>
-            <li>
-                <%= listItems[i] %>
-            </li>
+            <div class="item">
+                <input type="checkbox">
+                <p>
+                    <%= listItems[i] %>
+                </p>
+            </div>
             <% } %>
-    </ul>
 
-    <form action="/" method="post">
-        <input type="text" name="newItem">
-        <button type="Submit" name="button">Add</button>
-    </form>
-</body>
+                <form class="item" action="/" method="post">
+                    <input type="text" name="newItem" placeholder="New Item">
+                    <button type="Submit" name="list" value=<%=listTitle %>>+</button>
+                </form>
+    </div>
 
-</html>
+    <%- include("footer") -%>
