--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,4 +1,7 @@
 <%- include("header") -%>
-<h2>This is the about page.</h2>
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius odit eligendi commodi, natus hic nesciunt! Minus aut unde temporibus iste sapiente! At laboriosam quia quam fugit iusto alias enim optio.</p>
+
+<h2>This is the about page</h2>
+
+<p>jkhkjshjks dhfjkh sjkdfh sjkdf jksdfhjksfhjks dhjfk sjkdfjksdfhjkshdfjk sdjkf sjkdf jksd fjks djfkhsjkdf hsjkd fhs</p>
+
 <%- include("footer") -%>
