--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,23 +1,21 @@
 <%- include("header") -%>
-    <div id="heading" class="box">
-        <h1>
-            <%= listTitle %>
-        </h1>
-    </div>
-    <div class="box">
-        <% for (let i=0; i < listItems.length; i++){ %>
-            <div class="item">
-                <input type="checkbox">
-                <p>
-                    <%= listItems[i] %>
-                </p>
-            </div>
-            <% } %>
 
-                <form class="item" action="/" method="post">
-                    <input type="text" name="newItem" placeholder="New Item">
-                    <button type="Submit" name="list" value=<%=listTitle %>>+</button>
-                </form>
-    </div>
+  <div class="box" id="heading">
+    <h1> <%= listTitle %> </h1>
+  </div>
 
-    <%- include("footer") -%>
+  <div class="box">
+    <% for (let i=0; i<newListItems.length; i++) { %>
+      <div class="item">
+        <input type="checkbox">
+        <p><%=  newListItems[i]  %></p>
+      </div>
+      <% } %>
+
+      <form class="item" action="/" method="post">
+        <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+        <button type="submit" name="list">+</button>
+      </form>
+  </div>
+
+<%- include("footer") -%>
